# WoodWard

./: .context_handoff_state.json  .env.example  .gitattributes  .gitignore  ANTIGRAVITY_JOURNALIST_HANDOFF_DIRECTIVE.md  CICERO_STRUCTURAL_AUDIT.md  CONTEXT_HANDOFF.md  CONTEXT_HANDOFF_WORKFLOW.md  IMPLEMENTATION_PLAN.md  Investigating Neo4j Instance.md  Makefile  PHASE_1_TASKS.md  Phase1_Execution_Report.md  README.md  VS_CODE_HANDOFF.md  WoodWard_Status_Report.md  cicero_architecture.jsx  context_handoff  convert_eml_to_pdf.py  docker-compose.yml  export_for_notebooklm.py  forensic_report.md  generate_pdfs.py  investigative_journalist_briefing.md  manual_investigation_guide.md  multi_agent_strategy.md  phase2_plan.md  project_index.txt  pyproject.toml  segregation_audit_report.md  woodward_campaign_guide.md
For_NotebookLM/: 01_NOTEBOOKLM_factcheck_article1.md  02_GEMINI_GEM_system_instruction.md  03_CHATGPT_context_brief.md  04_CLAUDE_final_review.md  04_three_part_series_brief.md  05_NOTEBOOKLM_cross_reference.md  05_cabinet_restructuring_data.md  08_chatgpt_phase3_data.md  16_master_data_correction_briefing.md  18_data_response_sentinel.md  ARTICLE_1_THE_AUSTERITY_PARADOX.md  ARTICLE_2_THE_ACCOUNTABILITY_VOID.md  Staffing_Benchmark_2324.csv  TO_ACCOUNTANT_01_peer_spending_gap.txt  TO_ACCOUNTANT_01_peer_spending_gap_RESEARCH_FINDINGS.md  TO_JOURNALIST_04_three_part_series_brief.md  TO_JOURNALIST_04_vendor_data_update.txt  Top40_1920.csv  Top40_2021.csv  Top40_2425.csv  VPS_INVESTIGATION_MASTER_PLAN_v2.md  VPS_Staffing_Trend_5yr.csv  VPS_THREE_PART_SERIES_v3.md  (+36 more)
(+4040 files in other folders)
